# cowe.dev

./: .gitignore  Cargo.toml  Trunk.toml  default.nix  flake.nix  index.html  postgres.sh  shell.nix
backend/: Cargo.toml
backend/src/: main.rs
backend/src/routes/: posts.rs
common/src/types/: blogposts.rs
frontend/: Cargo.toml  index.html
frontend/src/app/: mod.rs  notfound_page.rs
frontend/src/app/blog/: blogpost_page.rs  blogposts_page.rs  mod.rs
frontend/src/components/: blogpost.rs  blogpost_list.rs  mod.rs  navbar.rs
frontend/src/services/: mod.rs
frontend/src/types/: blogposts.rs
src/: main.rs
src/app/: home.rs  mod.rs
src/app/blog/: blogpost_page.rs  blogposts_page.rs  mod.rs
src/components/: blogpost.rs  blogpost_list.rs  navbar.rs
src/services/: blogposts.rs
