[package]
name = "cowedev"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
gloo-net = "0.6.0"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
stylist = { version = "0.13", features = ["yew_integration", "parser"] }
