[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
gloo-net = "0.6.0"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
stylist = { version = "0.13", features = ["yew_integration", "parser"] }
chrono = { version = "0.4.42", features = ["serde", "alloc"] }
